fix spacing for kaereba

--- a/src/css/objects/themes/default/_o-postBlock.styl
+++ b/src/css/objects/themes/default/_o-postBlock.styl
@@ -270,9 +270,9 @@
       +media-query(media-medium)
         rhythmical-margin: 0 1 1 1
     .kaerebalink-image
-      flex-grow: 1
+      width: 23%
     .kaerebalink-info
-      flex-grow: 3.303
+      width: 77%
       rhythmical-padding: 0 0 0 0.5
       .kaerebalink-name
         font-weight: bold
@@ -294,7 +294,7 @@
           link-variation: $black-base true
           a, a:visited, a:active
             font-weight: bold
-            rhythmical-padding: 0 0.25 0 0.25
+            rhythmical-padding: 0.25 0.25 0.25 0.25
             border-radius: 7px
             border: 2px solid $ssc.Amazon
             background: tint($ssc.Amazon, ($amount-base * 2))
@@ -310,7 +310,7 @@
           link-variation: $black-base true
           a, a:visited, a:active
             font-weight: bold
-            rhythmical-padding: 0 0.25 0 0.25
+            rhythmical-padding: 0.25 0.25 0.25 0.25
             border-radius: 7px
             border: 2px solid $sc.Rakuten
             background: tint($sc.Rakuten, ($amount-base * 2))
